--- a/views/certificates/catalogCertificate.html
+++ b/views/certificates/catalogCertificate.html
@@ -3,7 +3,7 @@
         <div class="alert alert-info" ng-if="showPanel">
             No tienes certificaiones en esta area.
         </div>
-        <div class="alert alert-info">
+        <div class="alert alert-info" ng-if="!showPanel">
             Pronto encontraras las mejores certificaciones con las que podras prepararte.
         </div>
     </div>
