--- a/views/courseDetail.html
+++ b/views/courseDetail.html
@@ -119,7 +119,7 @@
                 Ninguno
             </p>
 
-            <a href="#" class="btn btn-verde btn-xlg margin--t1" data-toggle="modal" data-target="#js-ingreso" ng-if="showRegisterButton">
+            <a href="" class="btn btn-verde btn-xlg margin--t1"  ng-if="showRegisterButton" ng-click="inscribeUserOnCOurse()">
                  Inscríbete
             </a>
             <a href="{{ url }}" class="btn btn-verde btn-xlg margin--t1"  ng-if="showGetInButton">
