--- a/views/navbar.html
+++ b/views/navbar.html
@@ -32,7 +32,7 @@
                     <div class="col-xs-2 padding--r0 padding--l0 nav-topper__avatarUser">
                         <div class="row">
                             <a href="#/profile">
-                                <img src="images/avatar-user.jpg" alt="" class="img-responsive pull-right img-circle" >
+                                <img src="{{user_avatar}}" alt="" class="img-responsive pull-right img-circle" >
                             </a>
                         </div>
                     </div>
