--- a/views/competence_list.html
+++ b/views/competence_list.html
@@ -1,5 +1,5 @@
 <ol class="list-normal text text--gris margin--t1">
-    <li ng-repeat="competence in competences">
+    <li ng-repeat="competence in data">
         {{competence.description}}
     </li>
 </ol>
