--- a/views/profile.html
+++ b/views/profile.html
@@ -157,13 +157,11 @@
                 </div>
 
                 <!-- Recursos Favoritos -->
-                <div>
-                
-                </div>
-                <div ng-show="display_menu == 3" ng-if="1>2">
+
+                <div ng-show="display_menu == 3">
 
                     <a href="#" bookmarklet>ENLACE PARA BOOKMARKLET</a>
-                    <h1 class="text text--lite text--lg margin--t1 text--bold text--gris">
+                    <h1 class="text text--lite text--lg margin--t2 text--gris">
                         Recursos Favoritos
                     </h1>
 
