--- a/views/bagJobs.html
+++ b/views/bagJobs.html
@@ -1,4 +1,4 @@
-<div >
+<div ng-controller="detailsJobs">
 <section class="col-xs-12 sidebar-greenGrandient sidebar-greenGrandient--xlg sidebar-add__montain">
     <div class="container text-center">
         <h1 class="text text--azul_mid text--xxxxlg text--xbold margin--b0 text-center text-space1 text--upper">
